--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 ECE391 MP3 - Package contents
 ================================
 
+change
+
 createfs
     This program takes a flat source directory (i.e. no subdirectories
     in the source directory) and creates a filesystem image in the
